--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -43,8 +44,7 @@
     <li>Técnicas para aumentar o engajamento da página</li>
     <li>Trabalhar o design dos sites de forma ficar mais agradável</li>
     <li>Formas eficientes de resolver "bugs" no site</li>
-    <li>Entender que outras aplicações são importantes também ter conhecimento ao fazer uma página, por exemplo,
-      programas de edição de imagem</li>
+    <li>Entender que outras aplicações são importantes também ter conhecimento ao fazer uma página, por exemplo, programas de edição de imagem</li>
     <li>Aplicação Front-end</li>
     <li>Aplicação Back-end</li>
   </ul>
@@ -55,14 +55,14 @@
   <!--7. Insira pelo menos um link externo na página-->
   <a href="https://github.com/GabrielFMPinheiro" target="_blank">GitHub</a>
   <!--8. Crie um artigo sobre seu aprendizado-->
-  <article>
+  <article class="lado-esquerdo">
     <section>
       <h2>Meu aprendizado na Trybe</h2>
-      <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para serem programadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito e preocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e com um nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para todos independente do problema.</p>
+      <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para seremprogramadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito epreocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e comum nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para todos independente do problema.</p>
     </section>
   </article>
   <!--9. Crie uma seção que conta uma passagem sobre seu aprendizado-->
-  <section>
+  <section class="lado-direito">
     <aside>
       <h2>Uma passagem na Trybe</h2>
       <p> O meu primeiro projeto na Trybe, se chamou "lessons-leaned". Neste, fui responsável por montar um site do zero, seguindo diversas regras que me desafiava a todo instante. Se você quiser enfrentar isso também, acesse o site da Trybe e se inscrevendo. </p>
@@ -71,7 +71,7 @@
   <section>
     <h2>O que você irá aprender na Trybe?</h2>
     <p>A Trybe possui o foco de desenvolver um programador, principalmente Web. O curso é divido em módulo, onde cada um apresenta diversos conteúdos que serão aprendidos a cada dia. Na tabela abaixo, encontra-se quais são esses blocos:</p>
-      <!--12. link uma tabela à página-->
+    <!--12. link uma tabela à página-->
     <table>
       <tr>
         <th>Ordem</th>
@@ -87,4 +87,5 @@
     </table>
   </section>
 </body>
+
 </html>
