--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lições aprendidas - Trybe!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">
-            Titulo
+            Lições aprendidas - Trybe!
         </h1>
-        <nav>Inicio</nav>
-    </header>
+        <nav>
+            <a href="https://www.linkedin.com/in/hiago-briano/" target="_blank">Meu Linkedin</a> - 
+            <a href="https://github.com/HiagoBriano" target="_blank">Meu GitHub</a>
+        </nav>
+    </header></div>
+
     <section>
         <img id="minha_foto" src="imagens/eu-hiago-meme.jpeg" alt="Foto do autor">
     </section>
+<table>
+<tr>
     <main>
+        <td><h2>Aprendi</h2>
         <ol id="licoes_aprendidas">
            <li>Unix</li>
            <li>Git</li>
@@ -29,7 +36,9 @@
            <li>Zoom</li>
            <li>Inspect</li>
            <li>Semantica do HTML</li>
-        </ol>
+        </ol></td>
+        
+        <td><h2>Vou aprender</h2>
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>DOM</li>
@@ -41,9 +50,10 @@
             <li>React</li>
             <li>Node</li>
             <li>SQL</li>
-         </ul>
+         </ul></td>
     </main>
-<table> <tr>
+</tr>
+<tr>
     <td class="lado-esquerdo"><article>
         <h2>Artigo</h2>
         <p>
@@ -56,7 +66,8 @@
             Sempre fui uma pessoa que gostei muito de aprender, M-A-S aprender o que eu queria e não ia muito bem nas matérias obrigatórias.
         </p>
     </aside></td>
-</tr></table>
+</tr>
+</table>
     <footer id="rodape">
         Quem codou essa página se encontra nesse <a href="https://www.linkedin.com/in/hiago-briano/" target="_blank">Linkedin.</a>
     </footer>
