--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <header id="cabecalho">
     <h1 id="titulo">Hello World</h1>
   </header>
+
+  <main>
+    <img src="./BMTIMAO.jpg" id="minha_foto" alt="foto do autor do projeto">
+  </main>
   
 </body>
 </html>
