finaliza todos os requisitos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,36 @@
           <li>SQL</li>
         </ul>
       </div>
+      <table border="solid">
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
       <div class="articles-container">
         <article class="artigo lado-esquerdo">
           <h2>Sobre meu aprendizado</h2>
