alteracoes na sintaxe

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div id="cabecalho">
-      <h1 id="titulo">Lições Aprendidas</h1>
+      <h1 id="titulo">Lições Aprendidas HTML e css</h1>
 
     </div>
     <div>
@@ -46,6 +46,7 @@
     <li>Css Flexbox</li>
     <li>Jest</li>
     <li>React</li>
+    <li>SQL</li>
   </ul>
   <article>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
