--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     </nav>
   </header>
   <img id="minha_foto" src="fotos/foto.portfolio.jpeg" alt="foto de perfil da Millene Galetti-mulher com cabelo longo,cor castanho,óculos de grau,blusa preta">
+  <table>
+      <tr>
+          <td>Age</td>
+          <td>31 years old</td>
+      </tr>
+      <tr>
+          <td>Status</td>
+          <td>Married</td>
+      </tr>
+      <tr>
+          <td>Nationality</td>
+          <td>Brazilian</td>
+      </tr>
+  </table>
   <section>
 <ol id="licoes_aprendidas">
   <li>Unix</li>
