--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </div> 
   <div>
           <img id="minha_foto" src="minha_foto.jpeg">
-  </div>  
+  </div> 
+
+  <section>
   <div>
       <h2>
         <ol id="licoes_aprendidas">
@@ -46,6 +48,21 @@
           </ul>
       </h2>
   </div>  
-    
+</section>
+<div>
+    <footer id="rodape">
+      <nav id="links_externos">
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/hugo-maximiano-brito-62ab7a190/" target="_blank">Meu Linkkedin </a> 
+            </li>
+            <li>
+                <a href="https://github.com/hugomaximiano" target="_blank"> Meu GitHub</a>
+            </li>
+        </ul>
+
+      </nav>
+    </footer>
+</div>
 </body>
 </html>
