Adicionado tags, ids e classes no arquivo de estilização

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header id="cabecalho">
-        <div id="Menubar">
+        <div id="menubar">
             <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         </div>
     </header>
@@ -23,7 +23,7 @@
                 </div>
             </section>
             <section id="listas">
-                <div class="listas__box">
+                <div class="list__box">
                     <h2>Lições Aprendidas</h2>
                     <ol id="licoes_aprendidas">
                         <li class="list_item"></li>
@@ -57,11 +57,11 @@
                 <section id="artigo_meu_aprendizado">
                     <div id="artigo_box">
                         <h2>Meu Aprendizado</h2>
-                        <p>...</p>
+                        <p class="text">...</p>
                     </div>
                 </section>
-                <aside>
-                    <div>
+                <aside id="notas">
+                    <div id="notas_do_artigo">
                         <h2>Meu Aprendizado</h2>
                         <h3>A estrada até aqui</h3>
                         <P>...</P>
