Adiciona uma tabela a pagina

--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
       <hr>
     </main>
     <footer id="rodape">
+      <h2>Tabela elementos de uma página web</h2>
+      <table>
+        <tr>
+          <th>linguagem</th>
+          <th>Uso</th>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>Usada para colocar elementos visuais na página</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>Usada para estilizar os elementos HTML colocados na página</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>Usado para adicionar interações na página</td>
+        </tr>
+      </table>
+      <hr>
       <p>Você pode clicar <a href="https://jovemnerd.com.br/" target="_blank">aqui</a> para acessar um blog de notícias sobre o mundo geek!</p>
     </footer>
     <hr>
