--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="artigos">
       <article >   
         <h1>sobre seu aprendizado #loremipsum</h1>
-        <section>
+        <section class="lado-direito-centro">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam. Quaerat, laborum.
           
         </section>
