--- a/index.html
+++ b/index.html
@@ -1,64 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Primeiro projeto na Trybe | Breno Tainan</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header id="cabecalho">
-        <h1 id="titulo">Meu primeiro projeto na Trybe :)</h1>
+      <h1 id="titulo">Meu primeiro projeto na Trybe :)</h1>
 
-        <nav class="menu">
-            <ul>
-                <li><a href="https://github.com/brenotainandev" target="_blank">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/brenotainan" target="_blank">Linkedin</a></li>
-            </ul>
-        </nav>
+      <nav class="menu">
+        <ul>
+          <li>
+            <a href="https://github.com/brenotainandev" target="_blank"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/brenotainan" target="_blank"
+              >Linkedin</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <img id="minha_foto" src="/breno-perfil.jpg" alt="Foto de Breno Tainan em frente ao espelho, ele está vestido como uma blusa branca e está segurando um celular.">
+      <img
+        id="minha_foto"
+        src="/breno-perfil.jpg"
+        alt="Foto de Breno Tainan em frente ao espelho, ele está vestido como uma blusa branca e está segurando um celular."
+      />
 
+      <section class="licoes">
         <ol id="licoes_aprendidas">
-            <li>Zoom</li>
-            <li>Slack</li>
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Html</li>
-            <li>CSS</li>
-            <li>Autoconhecimento</li>
-            <li>Empatia</li>
-            <li>Html semântico</li>
+          <li>Zoom</li>
+          <li>Slack</li>
+          <li>Unix</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Html</li>
+          <li>CSS</li>
+          <li>Autoconhecimento</li>
+          <li>Empatia</li>
+          <li>Html semântico</li>
         </ol>
 
         <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS responsivo</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
+          <li>JavaScript</li>
+          <li>DOM</li>
+          <li>Forms</li>
+          <li>CSS responsivo</li>
+          <li>ES6</li>
+          <li>HOF</li>
+          <li>Unit Tests</li>
+          <li>React</li>
+          <li>Node</li>
+          <li>SQL</li>
         </ul>
+      </section>
 
+      <section class="artigo_apremdizado_maior">
         <article class="artigo_apremdizado">
-            <h3>Meu aprendizado na Trybe!</h3>
-            <p>
-                O aprendizado que estou tendo na Trybe está sendo incrível, até mesmo antes de me tornar aluno já estava aprendendo. O curso introdutório deu para ter um pouco de dimensão do era a Trybe, o processo seletivo foi bem acolhedor, e claro, os dois primeiros dias foram mais acolhedores ainda. <br>
-                Começamos aprendendo sobre unix e bash, logo em seguida ficamos feras em git e gitHub, estamos estudando atualmente Html e CSS, nesse período também tivemos momentos de interações com os colegas de curso e momento de soft skills onde começamos a aprender sobre inteligência emocional.
-            </p>
+          <p>
+O aprendizado que estou tendo na Trybe está sendo incrível. O curso introdutório deu para ter um pouco de dimensão do era a Trybe, o processo seletivo foi bem acolhedor, e claro, os dois primeiros dias foram mais acolhedores ainda. <br />
+Começamos aprendendo sobre unix e bash, logo em seguida ficamosferas em git e gitHub, estamos estudando atualmente Html e CSS, nesse período também tivemos momentos de interações com os colegas de curso e momento de soft skills onde começamos a aprender sobre inteligência emocional.
+          </p>
         </article>
+      </section>
     </main>
 
+    <section class="artigo_apremdizado_menor">
+      <aside class="artigo_apremdizado">
+        <p>
+Eu na posição de pessoa estudante, posso afirmar que a Trybe conta com uma equipe extremamente competente que tem como base ensinar o aluno aprender a aprender, com muita prática e conteúdo muito objetivo que lhe coloca no foco do problema a ser resolvido.
+        </p>
+      </aside>
+    </section>
     <footer id="rodape">
-        <h3>Site desenvolvido por Breno Tainan</h3>
+      <p>Site desenvolvido por Breno Tainan</p>
     </footer>
-</body>
+  </body>
 </html>
