--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <img id="minha_foto" src="/IMG_9102.jpg" alt="Foto de Everton Curti">
 
-        <nav class="portifolio">
+        <nav>
             <a href="https://everton-curti.github.io/" target="_blank">Everton Curti</a>
         </nav>
 
@@ -44,6 +44,13 @@
                 <li>Inspect</li>
             </ul>
         </section>
+
+        <article class="artigo">
+            <h2>Texto do Artigo</h2>
+            Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto
+            Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto. 
+        </article>
+        
 
         <section>
             <footer id="rodape">
