--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <header id="cabecalho" class="header">
     <h1 id="titulo">Lessons Learned</h1>
   </header>
+  <nav>
+    <ul>
+      <li><a href="#cabecalho">Início</a></li>
+      <li><a href="#licoes_aprendidas">Lições Aprendidas</a></li>
+      <li><a href="#licoes_a_aprender">Lições a Aprender</a></li>
+      <li><a href="https://www.linkedin.com/in/tainnaps/"
+          target="_blank">Linkedin</a></li>
+      <li><a href="https://github.com/tainnaps" target="_blank">Github</a></li>
+    </ul>
+  </nav>
   <section>
     <img id="minha_foto"
       src="https://media-exp1.licdn.com/dms/image/C4D03AQGNzMBMSt9ARQ/profile-displayphoto-shrink_800_800/0/1628638444292?e=1635379200&v=beta&t=ppkX48-iCDbSTrt333QTNw3CuyHcgXSi_iFDUWnOFJU"
