--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </ul>
   </section>
   <footer id="rodape">
-    
+    <a href="https://www.betrybe.com/" target="_blank">Visite Trybe</a>
   </footer>
 </body>
 </html>
