--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     
   </head>
   <body>
-    <div id="cabecalho">
+		<header id="cabecalho">
     	<h1 id="titulo">Lessons Learned</h1>
-		</div>
-    
+		</header>
+		<img src="minha_foto.jpeg" alt="Foto de Perfil">
 		
-
   </body>
 </html>
