--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="titulo">Trabalho do Brunão</h1>
     </header>
     <main id="main">
-        <section id="secao">
+        <section>
             <img src="imagens/eu.jpg" alt="eu" id="minha_foto">
             <section id="secao_list">
                 <h3>Lições aprendidas:</h3>
@@ -45,6 +45,7 @@
                 </ol>
             </section>
         </section>
+        <a href="https://www.linkedin.com/in/brunolorenzonlouzada/" target="_blank" id="link">Meu Linkedin</a>
     </main>
     <footer id="rodape">Chulé</footer>
 </body>
