--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
 
     <div class="lists">
       <h1>Lista de Skils</h1>
-      <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Slack</li>
-        <li>Zoom+aspirina</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Empatia</li>
-        <li>Semantic Code</li>
-        <li>Logica de programação</li>
-      </ol>
+      <table>
+      <tr>
+        <td>
+          <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Slack</li>
+            <li>Zoom+aspirina</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Empatia</li>
+            <li>Semantic Code</li>
+            <li>Logica de programação</li>
+          </ol>
+        </td>
+        <td>
     <ul id="licoes_a_aprender">
       <li>JavaScript</li>
       <li>DOM</li>
@@ -46,8 +51,10 @@
       <li>React</li>
       <li>Node</li>
       <li>SQL</li>
+    </td>
+    </tr>
     </ul>  
-    
+  </table>
     </div>
 
     <div class="artigos">
@@ -62,7 +69,6 @@
       <aside class="lado-esquerdo"> <h2>Artigo #aside</h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum eaque fugiat sunt consectetur, excepturi odit. Minus accusamus cumque id incidunt dolore inventore eius minima, nisi dolores voluptatibus, assumenda molestias!
       </aside>
     </div>
-
 
     <footer id="rodape" class="footer">
       <span class="by">Aluno Dev: <a href="https://github.com/blmarquess" target="_blank" >@blmarquess</a></span>
