--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas - TRYBE! 🚀</h1>
+  <header id="cabecalho">
+    <h1 id="titulo">Lições Aprendidas - TRYBE! 🚀</h1>
     </header>
+
+    <img id="minha_foto" src="images/minha-foto.jpeg" alt="Foto do Jonatas">
 </body>
 </html>
