--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header id="cabecalho">
     	<h1 id="titulo">Lessons Learned</h1>
 		</header>
-		<img src="minha_foto.jpeg" alt="Foto de Perfil">
+		<img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Perfil">
 		
   </body>
 </html>
