Task 12 and 13 completed

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </nav>
     </header>
     <main>
-        <article>
-            <img id="minha_foto" src="./myimage.jpg" alt="Minha foto">
-            <a href="https://github.com/KevinSena" target="_blank">Kevin Sena</a>
+        <article class="max-full">
+            <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
+            <a href="https://github.com/KevinSena" target="_blank">GitHub</a>
             <h2>Artigo</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit saepe modi ea, quis quaerat incidunt vel enim necessitatibus ad? Non molestiae, sapiente veniam facere nostrum temporibus eos? Et, ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum hic similique magni corporis? Fuga quos quo, similique rem fugiat cumque optio molestiae veritatis cupiditate nulla iusto eligendi quia, ducimus error!</p>
         </article>
-        <section>
+        <section class="max-full">
             <h2>Lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
@@ -51,8 +51,25 @@
                 <li>SQL</li>
             </ul>
         </section>
+        <section class="max-full">
+            <table>
+                <tr>
+                    <h2>Lorem ipsum</h2>
+                </tr>
+                <tr>
+                    <td>Lorem</td>
+                    <td>ipsum</td>
+                    <td>dolor</td>
+                </tr>
+                <tr>
+                    <td>sit</td>
+                    <td>amet</td>
+                    <td>consectetur</td>
+                </tr>
+            </table>
+        </section>
     </main>
-    <aside>
+    <aside class="max-full">
         <h2>Meu aprendizado</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id inventore accusamus, cupiditate consequuntur quos praesentium commodi, doloribus harum ad rem veritatis magni odit. Ducimus, eos molestias iusto amet labore quae!</p>
     </aside>
