--- a/index.html
+++ b/index.html
@@ -1,59 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <header id="cabecalho">
+  <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <title>Lessons Learned SD 16 B</title>
+  </head>
+  <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     <p><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
     <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p>
   </header>
   <body>
-    <img id="minha_foto" src="foto_fas.jpg" />
+    <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves" />
     <p>
       <a href="https://www.linkedin.com/in/fasouzarj" target="_blank"
         >Flávio Alves</a
       >
     </p>
-    <nav>
-      <table>
-        <tr>
-          <th>Lições</th>
-        </tr>
-        <tr>
-          <td>
-            <ol id="licoes_aprendidas">
-              <li>Unix</li>
-              <li>Bash</li>
-              <li>Git</li>
-              <li>Git Hub</li>
-              <li>Internet</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Autoconhecimento</li>
-              <li>Empatia</li>
-              <li>Profissionalismo</li>
-            </ol>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <ul id="licoes_a_aprender">
-              <li>JavaScript</li>
-              <li>Python</li>
-              <li>Java</li>
-              <li>Node</li>
-              <li>UX</li>
-              <li>UI</li>
-              <li>Kotlin</li>
-              <li>Kubernetes</li>
-              <li>Gestão do Tempo</li>
-              <li>Gestão de Crises</li>
-            </ul>
-          </td>
-        </tr>
-      </table>
-    </nav>
+    <section>
+      <nav>
+        <table>
+          <tr>
+            <th>Lições</th>
+          </tr>
+          <tr>
+            <td>
+              <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>Git Hub</li>
+                <li>Internet</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Autoconhecimento</li>
+                <li>Empatia</li>
+                <li>Profissionalismo</li>
+              </ol>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>Java</li>
+                <li>Node</li>
+                <li>UX</li>
+                <li>UI</li>
+                <li>Kotlin</li>
+                <li>Kubernetes</li>
+                <li>Gestão do Tempo</li>
+                <li>Gestão de Crises</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </nav>
+      <article>
+        <p>
+          Muito mais que aprender Front-end utilizando HTML, CSS, Javascript e
+          React; Back-end utilizando Banco de Dados, API Rest implementando
+          requisições server-side, autenticação, segurança e deploy; ou ainda
+          aprender Ciência da Computação com Algoritmos, Estrutura de Dados,
+          Paradigmas de programação, Python e Arquitetura de Computadores, na
+          Trybe aprendemos a desenvolver nossas habilidades interpessoais,
+          conhecidas como Soft Skills, algo muito valorizado no mercado de
+          trabalho.
+        </p>
+      </article>
+    </section>
+    <aside>
+      <p>
+        As aulas ministradas pelo "tio Jack" se mostraram bem diferentes. Ele
+        expôe os conceitos de maneira tão natural que se torna praticamente
+        impossível não compreender, com exemplos bem práticos e sempre nos
+        estimulando a buscar conhecimento!
+      </p>
+    </aside>
     <footer id="rodape">
       <p>
         Desenvolvido por
