change main articles to sections

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <article id="about_me">
+        <section id="about_me">
             <div class="container sec_about_me">
                 <section class="d_flex flex_column center_horizontal sec_ab_1">
                     <div class="presentation">
@@ -44,18 +44,18 @@
                     </div>
                 </section>
     
-                <section class="sec_ab_2">
-                    <p class="border_secondary cover_height self_resume">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis placeat, soluta quia officiis dolor magni enim nam unde non quisquam, rem architecto quaerat voluptates quasi officia consectetur distinctio quas nostrum.</p>
-                </section>
+                <article class="sec_ab_2">
+                    <p class="border_secondary cover_height self_resume">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis placeat, soluta quia officiis dolor magni enim nam unde non quisquam, rem architecto quaerat voluptates quasi officia consectetur distinctio quas nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quo alias reiciendis itaque veritatis omnis, odio, exercitationem tenetur, nisi adipisci illo odit! Autem nemo eveniet aliquam voluptatum. Cum, ratione iure.</p>
+                </article>
     
                 <section class="sec_ab_3">
                     <div class="minha_foto border_secondary"></div>
                     <img id="minha_foto" src="./profile_picture.jpeg" alt="Gabriel Silvestre profile picture">
                 </section>
             </div>
-        </article>
+        </section>
 
-        <article>
+        <section>
             <div>
                 <h3>Skills</h3>
             </div>
@@ -90,7 +90,7 @@
                     <li></li>
                 </ul>
             </section>
-        </article>
+        </section>
 
         <aside>
             <div>
