nono requisito concluido

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     <article class="artigo">
       <p>Menos de três semanas na Trybe já me trouxeram inúmeros aprendizados, desde assuntos onde eu já conhecia, e me surpreendi ao ser apresentado a novas formas de trabalhar com determinadas ferramentas, até assuntos que eu nunca vi. Está sendo tão prático aprender com a didática que é passada, que acabo enfrentando pouca dificuldade para entender os assuntos passados até o momento.</p>
     </article>
+
+    <aside class="sidebar">
+      <p>Conseguir compreender o sentido do git foi um dos aprendizados mais incríveis até o momento, pois já trabalho com outra ferramenta de versionamento, mas aqui eu conseguir entender a lógica de determinadas ações, nas quais já busquei entender sozinho, mas não havia conseguido.</p>
+    </aside>
   </main>
   <footer id="rodape">
     <a class="link_redes_sociais" href="https://github.com/orlandodantas" target="_blank"><img src="img/github.png" alt="gatinho do GitHub"></a>
