--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
     <h1 id="titulo">Licoes Aprendidas na Trybe</h1> 
     <nav>
       <ul>
+
+        <!-- Foi usado codigo  .screen-reader-only em conjunto com css esse codigo foi pego da pagina: https://codersblock.com/blog/external-links-new-tabs-and-accessibility/ 
+        Ele serve para que os screen reader avisem ao usuario que o link ira abrir uma nova pagina  -->
+
         <li><a href="#">Home</a></li>
         <li><a href="#contato">Contato</a></li>
-        <li><a href="https://github.com/JeffThierch" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/jeffthierch/" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/JeffThierch" target="_blank">GitHub
+          <span class="screen-reader-only">(opens in a new tab)</span></a></li>
+        <li><a href="https://www.linkedin.com/in/jeffthierch/" target="_blank">LinkedIn
+          <span class="screen-reader-only">(opens in a new tab)</span></a></li>
       </ul>
     </nav>
    
@@ -81,6 +87,7 @@
       <h1 id="contato" class="sub-title-contact">Contato</h1>
       <section class="tabel-section">
         <table class="tabela-info">
+          <caption class="screen-reader-only">Informacoes de contato</caption>
           <tr>
             <th>Telefone</th>
             <th>Email</th>
