--- a/index.html
+++ b/index.html
@@ -17,19 +17,38 @@
                 <img id="minha_foto" src="pp.jpeg" alt="Uma foto minha andando de bicicleta na serra da prainha">
             </section>
             <section>
-                <ol id="licoes_aprendidas">
-                    <h2 id="titulo-licoes">Lições aprendidas:</h2>
-                    <li>CSS</li>
-                    <li>Empatia</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>HTML</li>
-                    <li>HTML Semântico</li>
-                    <li>Internet</li>
-                    <li>Slack</li>
-                    <li>Unix & Bash</li>
-                    <li>Zoom</li>
-                </ol>
+               <table>
+                   <ol id="licoes_aprendidas">
+                       <h2 class="lado-esquerdo">Lições aprendidas:</h2>
+                       <li>CSS</li>
+                       <li>Empatia</li>
+                       <li>Git</li>
+                       <li>GitHub</li>
+                       <li>HTML</li>
+                       <li>HTML Semântico</li>
+                       <li>Internet</li>
+                       <li>Slack</li>
+                       <li>Unix & Bash</li>
+                       <li>Zoom</li>
+                   </ol>
+               </table>
+            </section>
+            <section>
+                <table>
+                    <ul id="licoes_a_aprender">
+                        <h2 class="lado-direito">Lições a aprender:</h2>
+                        <li>JavaScript</li>
+                        <li>DOM</li>
+                        <li>Web Storage</li>
+                        <li>Forms</li>
+                        <li>CSS Flexbox</li>
+                        <li>CSS Responsivo</li>
+                        <li>ES6</li>
+                        <li>Jest</li>
+                        <li>React</li>
+                        <li>SQL</li>
+                    </ul>
+                </table>
             </section>
         </article>
     </main>
