--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <section>
         <article id="article">
           <h2>Minha <sapn class="word">Jornada</sapn></h2>
-          <p>"Toda <sapn class="word">caminhada</sapn> começa com o <sapn class="word">primeiro paso</sapn>". E a <sapn class="word">Trybe</sapn> é o meu primeiro passo para me tornar um programador! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</p>
+          <p>"Toda caminhada começa com o primeiro paso". E a Trybe é o meu primeiro passo para me tornar um programador! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</p>
         </article>
         <aside id="aside">
           <h2>Meus <sapn class="word">Conhecimentos</sapn></h2>
-          <p>"Toda <sapn class="word">caminhada</sapn> começa com o <sapn class="word">primeiro paso</sapn>". E a <sapn class="word">Trybe</sapn> é o meu primeiro passo para me tornar um programador! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</p>
+          <p>"Toda caminhada começa com o primeiro paso". E a Trybe é o meu primeiro passo para me tornar um programador! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</p>
         </aside>
       </section>
     </div>
@@ -70,8 +70,8 @@
       </section>
     </div>
   </main>
-  <!--<footer id="rodape">
-    aaaaaaaaaaaaaaaa
-  </footer>-->
+  <footer id="rodape">
+    <p>Airton <span class="word">Silva</span>, pessoa estudante <span class="word">Trybe</span> com muito <span class="word">orgulho</span>. #VQV <span class="word">Turma16</span>!</p>
+  </footer>
 </body>
 </html>
