--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
         Iniciei meus estudo em programação por conta da trybe, conheci a escola através de uma propaganda no instagram, na verdade <br>
         meu irmão que trabalha com ciência de dados já havia me falado dela. Quando passei a ter um contato real com a escola pude encontrar<br>
          nela um ambiente seguro, que vem tornando meu aprendizado cada vez mais tranquilo. Os primeiros dias foram de muito desconforto, pois<br>
-          estou fazendo transição de carreira não entendia nada da área, tive que instalar programas que nem conhecia. Sigo confiante, acreditando<br>
-           na equipe que está comigo, e amando aprender tudo.
+          estou fazendo transição de carreira não entendia nada da área, tive que instalar programas que nem conhecia.
     </article>
     
     <section class="margem"><aside>Logo que cheguei tive dificuldades com o site github,<br>
