--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title id="cabecalho">Rafael Santos | Lessons Learned</title>
 </head>
 <body>
+
     <header>
     <h1 id="titulo">Project Trybe</h1>
     </header>
@@ -18,7 +19,7 @@
     </nav>
     <section>
     <h2>1 -Lições</h2>
-    <ol id="licoes_aprendidas">
+    <ol id="licoes_aprendidas" class="lado_direito">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -32,7 +33,7 @@
     </ol>
     </section>
     <section>
-    <ul id="licoes_a_aprender">
+    <ul id="licoes_a_aprender" class="lado_esquerdo">
         <li><strong>JavaScript</strong></li>
         <li>DOM</li>
         <li>Web Storage</li>
