--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 </article>
     
                 <section class="sec_ab_3">
-                    <div class="minha_foto border_secondary"></div>
-                    <img id="minha_foto" src="./profile_picture.jpeg" alt="Gabriel Silvestre profile picture">
+                    <img id="minha_foto" class="border_secondary" src="./Profile_picture_square.jpeg" alt="Gabriel Silvestre profile picture">
                 </section>
             </div>
         </section>
