--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
         <h1 id="titulo">Lições Aprendidas - TRYBE!</h1>
     </header>
     <img id="minha_foto" src="fotoperfil/33186865_1963908880320981_5776167367381876736_n.jpg" alt="">
-    
+
     <a href="https://www.instagram.com/diego_morgoth/" target="_blank">Diego Mendes</a>
     
+    <article>
+        <h3>Minha tragetória TRYBE até agora!</h3>
+        <section>Bom dia, boa tarde e boa noite, meu nome é <i><strong>Diego</strong></i> e gostaria de dividir com vcs minha esperiência até o momento no mundo da programação,em 2 semanas de curso passei de uma pessoa que não sabia absolutamente nada sobre programação, pra alguém que já consegue arranhar a criação de sua pŕopria página da net, devo tudo isso à <a href="https://www.betrybe.com/" target="_blank">TRYBE</a> e só tenho a agradecer a todos os envolvidos neste projeto que mudará nossas vidas!
+        </section>
+    </article>
     <ol id="licoes_aprendidas">Lições Aprendidas
      <li>Unix</li>
      <li>Git</li>
