Atualização da tag head do HTML. Requisito 1 OK.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lessons Learned by Nayara</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
