--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
       <li>Python</li>
     </ul>
   </section>
-  <article>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem aperiam sit labore id? Dicta iusto fugiat minima voluptatibus placeat voluptatem cum ipsa aspernatur nihil ducimus repellendus tempora, est earum!</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt doloribus aperiam assumenda? Fuga obcaecati, libero esse, tempora nobis aut voluptatum nihil ut facilis sequi similique, eos commodi ea vel inventore?</p>
-  </article>
+  <section>
+    <article>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem aperiam sit labore id? Dicta iusto fugiat minima voluptatibus placeat voluptatem cum ipsa aspernatur nihil ducimus repellendus tempora, est earum!</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt doloribus aperiam assumenda? Fuga obcaecati, libero esse, tempora nobis aut voluptatum nihil ut facilis sequi similique, eos commodi ea vel inventore?</p>
+    </article>
+    <aside>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis totam reiciendis minus minima, fugiat sunt dolorum fugit illum accusamus asperiores vero pariatur. Distinctio perspiciatis architecto tempore. Assumenda perspiciatis iste ea.</p>
+    </aside>
+  </section>
   <footer id="rodape">
     <a href="https://www.betrybe.com/" target="_blank">Visite Trybe</a>
   </footer>
