--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 
   <main>
     <img src="./BMTIMAO.jpg" id="minha_foto" alt="foto do autor do projeto">
+    <ol id="licoes_aprendidas">
+      <li>Fundamentos do desenvolvimento Web</li>
+      <li>Unix & Shell</li>
+      <li>Git & Github - o que é e pra que serve</li>
+      <li>Git & Github - entendendo os comandos</li>
+      <li>Internet - entendendo como ela funciona</li>
+      <li>HTML & CSS - estruturas de página</li>
+      <li>HTML & CSS - primeiros passos em CSS</li>
+      <li>HTML & CSS - seletores e posicionamento</li>
+      <li>HTML & CSS - semântico</li>
+      <li>NPM & Linters</li>
+    </ol>
   </main>
   
 </body>
