--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
   </head>
   <body>
    <div id="cabecalho">
-       <h1 id="titulo">Olá meu nome é Izabela</h1>
+       <h1 id="titulo">Olá meu nome é Izabela Hammerschlag</h1>
    </div>
-   <img id="minha_foto" src="minhafoto.png"   
+   <img id="minha_foto" src="minhafoto.png"> 
+   <h2>Lista de lições aprendidas:</h2>
+   <ol id="licoes_aprendidas">
+       <li>Unix</li>
+       <li>Bash</li>
+       <li>comandos no terminal</li>
+       <li>VS code</li>
+       <li>Git</li>
+       <li>GitHub</li>
+       <li>Internet</li>
+       <li>plugins em programas</li>
+       <li>Html</li>
+       <li>CSS</li>
+    </ol>
   </body>
 </html>
+
+
