Requisito 13 box model

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <nav>
-    <ul>
+    <ul class="indice">
       <li>Lições aprendidas</li>
       <li>Lições a aprender</li>
       <li>Artigo</li>
