Modificacoes e requisitos realizados ate o 8.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
             <nav>
                 <ol id="licoes_aprendidas">
-                    <p><strong>Lições aprendidas:</strong></p>
+                    <h2><strong>Lições aprendidas:</strong></h2>
                     <li>Unix</li>
                     <li>Git</li>
                     <li>GitHub</li>
@@ -32,6 +32,35 @@
                     <li>Semantic HTML</li>
                 </ol>
             </nav>
+        </div>
+        <div>
+            <nav>
+                <ul id="licoes_a_aprender">
+                    <h2><strong>Lições à aprender</strong></h2>
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>SQL</li>
+                    <li>HOF</li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <footer id="rodape">
+                <p>Ecrito por Laila Rodrigues</p>
+                <p>Publicado em 24/08/2021</p>
+            </footer>
+        </div>
+        <div>
+            <article>
+                <h2>Sobre meu aprendizado:</h2>
+                <p>Atualmente estou cursando desenvolvimento de software web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank">Trybe!</a>. Após dez dias de curso aprendi Unix e Bash, já adquiri prática em HTML e CSS e vou iniciar JavaScript. <br>O curso conta com uma formação completa em desenvolvimento de software web, além de aprender como lidar no mercado de trabalho, através das  softskills. No momento, estou desenvolvendo minhas softskills, dentre elas, a que mais tenho dificuldade é a comunicação, pois sou uma pessoa extremamente tímida, mas até o final do curso espero ter desenvolvido isso.</p>
+            </article>
         </div>
     </body>
 </html>
