--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
 		</header>
 		<img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Perfil">
 		
+		<ol id="licoes_aprendidas">
+			<li>Javascript</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>React</li>
+			<li>Node</li>
+			<li>Express.js</li>
+			<li>SQL</li>
+			<li>NoSQL</li>
+			<li>Git</li>
+			<li>Python</li>
+		</ol>
   </body>
 </html>
