--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header id="cabecalho">
     <h1 id="titulo">Aplicando Conhecimento Aprendido</h1>
   </header>
+  <nav></nav>
   <figure>
     <img id="minha_foto" img src="/img/pic-perfil-light.png" alt="Minha Foto">
   </figure>
