--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned-Trybe</h1>
     <nav>
-        <ul>
-            <li> <a href="#minha_foto">Página Inical</a></li>
-            <li> <a href="#sobre">Sobre</a></li>
-            <li> <a href="#contato">Contato</a></li>
+        <ul id="list">
+            <li> <a href="#minha_foto">Home Page</a></li>
+            <li> <a href="#sobre">About</a></li>
+            <li> <a href="#contato">Contact</a></li>
           </ul>
     </nav>
   </header>
   <img id="minha_foto" src="fotos/foto.portfolio.jpeg" alt="foto de perfil da Millene Galetti-mulher com cabelo longo,cor castanho,óculos de grau,blusa preta">
-  <table>
+  <table><h3>About me</h3>
       <tr>
-          <td>Age</td>
+          <td><strong>Age:</strong></td>
           <td>31 years old</td>
       </tr>
       <tr>
-          <td>Status</td>
+          <td><strong>Status:</strong></td>
           <td>Married</td>
       </tr>
       <tr>
-          <td>Nationality</td>
+          <td><strong>Nationality:</strong></td>
           <td>Brazilian</td>
       </tr>
   </table>
@@ -64,9 +64,9 @@
 <aside>
     <p>Lessons Learned is my first project and it's been amazing to develop  with all the HTML and CSS knowledge I learned in 4 days! That's right! 4 days of classes and content at Trybe and I'm already managing to put it into practice. one of the most motivating moments since I started the course.</p>
 </aside>
-<h2 id="contato">Contatos</h2>
+<h2 id="contato">Contato</h2>
 <a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a><br>
 <a href="https://www.linkedin.com/in/millene-galetti-acosta-7a0110202/" target="_blank">Meu Linkedin</a>
-<footer id="rodape">Todos os direitos reservados,Millene Galetti</footer>
+<footer id="rodape">Todos os direitos reservados,Millene Galetti &reg</footer>
 </body>
 </html>
