colocado listas lado a lado.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <header id="cabecalho"> 
       <h1 id="titulo">Lições Aprendidas! - Trybe - Projeto</h1>
-      
   </header>
   <main>
     <div>
@@ -23,32 +22,36 @@
       </ul>
     </nav>
     <section>
-      <h2>Lições aprendidas</h2>
-      <ol id="licoes_aprendidas">
-        <li>HTML</li>
-        <li>Tags</li>
-        <li>Semântica</li>
-        <li>CSS</li>
-        <li>Display</li>
-        <li>Background</li>
-        <li>Seletores e Posicionamento</li>
-        <li>Estrutura de páginas de HTML</li>
-        <li>Unix & Bash</li>
-        <li>Git, Github e Internet</li>
-      </ol>
-      <h2>Lições que desejo aprender</h2>
-      <ul id="licoes_a_aprender">
-        <li>Rest</li>
-        <li>JavaScript</li>
-        <li>Flexbox</li>
-        <li>API</li>
-        <li>Funções SQL</li>
-        <li>MongoDB</li>
-        <li>NodeJS</li>
-        <li>Solid e ORM</li>
-        <li>Unix & Bash</li>
-        <li>Deployment</li>
-      </ul>
+      <div>
+        <h2>Lições aprendidas</h2>
+        <ol id="licoes_aprendidas">
+          <li>HTML</li>
+          <li>Tags</li>
+          <li>Semântica</li>
+          <li>CSS</li>
+          <li>Display</li>
+          <li>Background</li>
+          <li>Seletores e Posicionamento</li>
+          <li>Estrutura de páginas de HTML</li>
+          <li>Unix & Bash</li>
+          <li>Git, Github e Internet</li>
+        </ol>
+      </div>
+      <div>
+        <h2>Lições que desejo aprender</h2>
+        <ul id="licoes_a_aprender">
+          <li>Rest</li>
+          <li>JavaScript</li>
+          <li>Flexbox</li>
+          <li>API</li>
+          <li>Funções SQL</li>
+          <li>MongoDB</li>
+          <li>NodeJS</li>
+          <li>Solid e ORM</li>
+          <li>Unix & Bash</li>
+          <li>Deployment</li>
+        </ul>
+      </div>
     </section>
     <article>
       <h3>O meu caminho até aqui!</h3>
