--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <section id="listas" class="lado-direito" > Listas
 <ol id="licoes_aprendidas"> <h2>Lições Aprendidas</h2>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Unix & Bash</li>
+    <li>Git, GitHub e Internet</li>
+    <li> Introducao à HTML e CSS</li>
     <li></li>
     <li></li>
     <li></li>
@@ -46,12 +46,12 @@
 </ol>
 
 <ul id="licoes_a_aprender"> <h2>Lições a Aprender</h2>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li> Java Script</li>
+    <li> HTML  CSS: Forms, Flexbox e Responsivo</li>
+    <li> JavaScript: ES6 e Testes Unitários</li>
+    <li> Higher Order Functions do JavaScrit ES6</li>
+    <li> JavaScript Assíncrono e Promises</li>
+    <li> Testes automatizados com Jest</li>
     <li></li>
     <li></li>
     <li></li>
