entrada da tabela

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <article class="lado-esquerdo"><p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum</p></article>
             <aside class="lado-direito"><p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p></aside>
 
+        </section>
+        <section id="section-table">
+            <table id="tabela"><p>TABLE TABLE TABLE TABLE TABLE TABLE TABLE TABLE</p></table>
         </section>  
     </main>
     <footer id="rodape"><p>Conteúdo compilado por Guilherme Andrade Rosa. Santos, 2021</p></footer>
