--- a/index.html
+++ b/index.html
@@ -58,18 +58,39 @@
         </div>
     </section>
 
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam aut earum sint laborum velit quos ducimus
-            mollitia. Illum neque natus, quod vel maiores debitis a laudantium cum, quibusdam, ipsam rem?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptatibus autem eaque quia consectetur!
-            Sunt facilis est nesciunt, voluptate temporibus ipsa sed voluptatum, quia, quis nobis enim blanditiis
-            officia? Eius?</p>
-    </article>
+    <div class="secao-aprendizado">
+        <article class="lado-esquerdo">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam aut earum sint laborum velit quos
+                ducimus
+                mollitia. Illum neque natus, quod vel maiores debitis a laudantium cum, quibusdam, ipsam rem?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptatibus autem eaque quia
+                consectetur!
+                Sunt facilis est nesciunt, voluptate temporibus ipsa sed voluptatum, quia, quis nobis enim blanditiis
+                officia? Eius?</p>
+        </article>
 
-    <aside class="lado-direito">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi distinctio deleniti in consequuntur molestiae
-            rerum sequi ipsum nobis, atque asperiores iusto placeat. Eius aut excepturi unde provident vitae a quae.</p>
-    </aside>
+        <aside class="lado-direito">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi distinctio deleniti in consequuntur
+                molestiae
+                rerum sequi ipsum nobis, atque asperiores iusto placeat. Eius aut excepturi unde provident vitae a quae.
+            </p>
+        </aside>
+    </div>
+
+    <table>
+        <tr>
+            <th>Módulo 1</th>
+            <th>Módulo 2</th>
+            <th>Módulo 3</th>
+            <th>Módulo 4</th>
+        </tr>
+        <tr>
+            <td>Fundamentos do Desenvolvimento Web</td>
+            <td>Desenvolvimento Front-end</td>
+            <td>Desenvolvimento Back-end</td>
+            <td>Ciência da Computação</td>
+        </tr>
+    </table>
 
     <footer id="rodape">
         &copy Grazziano B Fagundes 2021
