--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <hearder id="cabecalho">
+      <header id="cabecalho">
 <h1 id="titulo">Lições</h1>
-      </hearder>
+      </header>
     <img src="rsz_foto1.jpg" id="minha_foto">
     <section>
     <ol id="licoes_aprendidas"> 
@@ -26,7 +26,6 @@
         </ol>
         </section>
     <section>
-    </ol>
     <ul id="licoes_a_aprender">
     <h2>Lições a aprender</h2>
     <li>Utilizar Java Script</li>
@@ -40,9 +39,20 @@
     <li>Front-end</li>
     <li>Back-end</li>
     </ul>
-    </section>
-    <a href="https://www.linkedin.com/in/nathalia-fonseca-miranda/" target="_blank">LinkedIn</a>
-  <section>
+</section>
+   <nav><a href="https://www.linkedin.com/in/nathalia-fonseca-miranda/" target="_blank">LinkedIn</a></nav>
+ <article>
+      <h3>Aprendizado</h3>
+      <p>Nestas ultimas 3 semanas na Trybe pude aprender um pouco de html, css e também sobre git e github. Além disso, já aprendi também um pouco sobre softs skills e sua importância no mercado de trabalho. Não tinha contato com programação antes, então ver minha evolução me anima e me deixa cada vez mais certa de que estar na Trybe foi a melhor escolha que fiz para minha vida profissional. </p>
+  </article>
+ <section>
+  <p>Aprender não tem sido fácil, mas com muita dedicação, horas de estudos, ajuda dos colegas do curso e suporte nas mentorias da Trybe, tenho conseguido entender e aplicar o conhecimento de forma prática nos exercícios, e agora no projeto.</p>
+</aside>
+Estudar na Trybe
+<aside>
+  </section>
+
+    <section>
     <footer id="rodape">
         <p>2021, Nathalia</p>
         </footer>
