--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis totam reiciendis minus minima, fugiat sunt dolorum fugit illum accusamus asperiores vero pariatur. Distinctio perspiciatis architecto tempore. Assumenda perspiciatis iste ea.</p>
     </aside>
   </section>
+  <table>
+    <tr>
+      <th>Nome</th>
+      <th>Turma</th>
+    </tr>
+    <tr>
+      <td>Marcus Thadeu</td>
+      <td>16 Tribo B</td>
+    </tr>
+  </table>
   <footer id="rodape">
     <a href="https://www.betrybe.com/" target="_blank">Visite Trybe</a>
   </footer>
