Add exercise 5 completed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
       <li>HTML & CSS - semântico</li>
       <li>NPM & Linters</li>
     </ol>
+    <ul id="licoes_a_aprender">
+      <li>JavaScript</li>
+      <li>Mais JavaScript...</li>
+      <li>E um pouco mais de JavaScript...</li>
+      <li>React</li>
+      <li>VueJS</li>
+      <li>SQL</li>
+      <li>MongoDB</li>
+      <li>API</li>
+      <li>Estrutura de dados</li>
+      <li>Python</li>
+    </ul>
   </main>
   
 </body>
