--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 <li>SQL</li>
             </ul>
         </section>
+        <article>
+            <h2>Meu aprendizado</h2>
+            A Trybe tem me proporcionado um curso onde o meu papel implica ser protagonista na minha trajetória de<br>
+            estudos. Tenho aprendido coisas até o momento com HTML,CSS,GitHub,Git e semântica de HTML. A cada módulos tem<br>
+            incluido também projetos. 
+        </article>
         <footer id="rodape">
             Todos direitos reservado, Hugo Daniel.
         </footer>
