--- a/index.html
+++ b/index.html
@@ -80,7 +80,26 @@ Eu na posição de pessoa estudante, posso afirmar que a Trybe conta com uma equ
       </aside>
     </section>
     <footer id="rodape">
-      <p>Site desenvolvido por Breno Tainan</p>
+        <section class="base_rodape">
+            <section class="creditos">
+                <p>Site desenvolvido por Breno Tainan</p>
+            </section>
+            <section class="contato">
+                <table class="tabela_contato">
+                    <tr>
+                        <td>E-mail: </td>
+                        <td>brenoaguiar@trybe.com</td>
+                    </tr>
+                    <tr>
+                        <td>Tel:.</td>
+                        <td>(77) 0000-0000</td>
+                    </tr>
+                </table>
+            </section>
+            
+        </section>
+
+      </table>
     </footer>
   </body>
 </html>
