--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         </ul>
       </div>
     </section>
-    <article>
+    <article class="lado_esquerdo">
       <h3>O meu caminho até aqui!</h3>
       <p>Incrivelmente me assusto com o que sou capaz de fazer em curto espaço de tempo. A aprendizagem foi intensa, mas recompensadora. Inegavelmente o Tio Jack foi essencial para guiar por este caminho tortuoso dos becos escuros do HTML e CSS. Porém, agora me sinto, pelo menos um pouco, mais preparado para enfrentar maiores desafios e evoluir finalmente. É razoável afirmar que a Trybe será o foco de meus esforços por muito tempo.</p>
     </article>
-    <aside>
+    <aside class="lado_direito">
       <h3>Passagem sobre o aprendizado</h3>
       <p>Durante a longa e dura jornada, me deparei com um crescimento inesperado em um curto período. Veja, mesmo que antes do início da Trybe tentei aprender HTML/CSS por intermédio de outras plataformas, sem sucesso. As informações providas, apesar de boas, não direcionam em um crescimento contínuo.</p>
     </aside>
